--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
     {%- include header.html -%}
 
     <main class="page-content" aria-label="Content">
+      <div class="bg"></div>
       <div class="wrapper">
         {{ content }}
       </div>
